fix: align time control

--- a/src/pages/Game/Game.module.scss
+++ b/src/pages/Game/Game.module.scss
@@ -47,6 +47,7 @@
     display: flex;
     width: 80%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .centered_column {
